[package]
name = "rust-aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
itertools = "0.12.0"
num-traits = "0.2.17"
tap = "1.0.1"
indexmap = "2.1.0"
z3 = "0.12.1"
